<resources>
  <string name="app_name">Spotfind</string>
  <string name="deletar_compra">Deletar Reserva</string>
  <string name="id_evento">ID</string>
  <string name="nome_carro">Evento</string>
  <string name="valor_compra">Valor</string>
  <string name="titulo">Titulo</string>
  <string name="ano_filme">Ano</string>
  <string name="atores">Atores</string>
  <string name="genero">Genero</string>
  <string name="imbbId">IMDB</string>
  <string name="local">Local</string>
  <string name="error_user_passwd">Usuario / senha invalido</string>
  <string name="botao_compras">Minhas Reservas</string>
  <string name="lista_filmes_botao">Filmes Disponíveis</string>
  <string name="fazer_compra">Reservar Agora</string>
  <string name="confirma_compra">Confirmar Reserva</string>
  <string name="compra_com_sucesso">Reserva realizada com sucesso!</string>
  <string name="compra_nao">Não foi possível reservar</string>
  <string name="valor_compra_pago">Valor Pago</string>
  <string name="aviso_compra">Você deseja realizar mesmo essa reserva?</string>
  <string name="nome_usuario">Nome e Sobrenome</string>
  <string name="email">Seu Email</string>
  <string name="senha">Senha</string>
  <string name="cadastrar">Cadastrar</string>
  <string name="ja_possuo_conta">Já possuo conta</string>
  <string name="digite_seu_nome">Digite seu nome</string>
  <string name="digite_email">Digite seu email</string>
  <string name="preencha_email">Preencha o email válido!</string>
  <string name="preencha_nome">Preencha o nome!</string>
  <string name="preencha_senha">Senha: qualquer 5 dígitos, sem espaços</string>
  <string name="erro_cadastrar">Erro no servidor ao cadastrar</string>
  <string name="deletar_conta">Deletar Minha Conta</string>
  <string name="confirma_delete_txt">Você deseja mesmo deletar sua conta?</string>
  <string name="desisto">Não Quero!</string>
  <string name="voce_deseja_deletar">Você deseja mesmo deletar sua conta?</string>
  <string name="sair_logout">Logout / Sair</string>
  <string name="sem_compras">Nada Encontrado</string>
  <string name="sobre_btn">Sobre</string>
  <string name="faculdade">Faculdade SENAI de Tecnologia Porto Alegre</string>
  <string name="disciplina">Disciplina Programação em Dispositivos Móveis</string>
  <string name="direitos_reservados">All Rights Reserved</string>
  <string name="professor">Professor Marcelo</string>
</resources>
