<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  tools:context=".DetalheFilmeActivity">

  <FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="385dp"
    android:layout_height="235dp"
    android:layout_marginBottom="10dp"
    app:layout_constraintBottom_toTopOf="@+id/doComprarBtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.48"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageViewCapaF">

    <TableLayout
      android:layout_width="374dp"
      android:layout_height="wrap_content"
      android:layout_margin="2sp"
      tools:ignore="MissingConstraints">

      <TableRow
        android:layout_height="match_parent"
        android:layout_marginLeft="2sp"
        android:layout_marginTop="3sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:layout_width="23dp"
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/titulo"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtTituloF"
          android:layout_width="285dp"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe"
          app:autoSizeTextType="uniform" />
      </TableRow>

      <TableRow
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/ano_filme"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtAnoF"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>

      <TableRow
        android:layout_marginLeft="2sp"
        android:layout_marginEnd="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/genero"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtGeneroF"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>


      <TableRow
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/atores"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtAtoresF"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>

      <TableRow
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/imbbId"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtImdbIdF"
          android:layout_width="307dp"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/local"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtLocalF"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>

      <TableRow
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:layout_marginBottom="7sp">

        <TextView
          android:background="@color/colorPrimary"
          android:padding="3dip"
          android:text="@string/valor_compra"
          android:textColor="#fefefe"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/txtValorF"
          android:gravity="right"
          android:padding="3dip"
          android:textAlignment="viewStart"
          android:textColor="#fefefe" />
      </TableRow>
    </TableLayout>
  </FrameLayout>

  <com.facebook.drawee.view.SimpleDraweeView
    android:id="@+id/imageViewCapaF"
    android:layout_width="178dp"
    android:layout_height="274dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="30dp"
    app:layout_constraintBottom_toTopOf="@+id/frameLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:srcCompat="@tools:sample/backgrounds/scenic" />

  <Button
    android:id="@+id/doComprarBtn"
    android:layout_width="183dp"
    android:layout_height="47dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="33dp"
    android:background="#FFFFFF"
    android:onClick="comprarFilme"
    android:text="@string/fazer_compra"
    android:textColor="#673AB7"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

  <!--  <com.facebook.drawee.view.SimpleDraweeView-->
  <!--    android:id="@+id/imgPoster"-->
  <!--    android:layout_width="300px"-->
  <!--    android:layout_height="445px" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
